git add <file>...

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 <body>
     <h1> my first ever website </h1>
     <h3>my name is jony</h3>
-    
+    <p>amar sonar bangla ami tomay valobashi. <b>chirodin  tomar akash</b> tomar batash amar prane bahai bashi sonar bangla ami tomay balo bashi.</p>
+    <h2>My friend name</h2>
+    <ul>
+        <li>Rony</li>
+        <li>Miraz</li>
+        <li>Amin</li>
+        <li>Billal</li>
+    </ul>
 </body>
 </html>
