--- a/index.html
+++ b/index.html
@@ -7,31 +7,32 @@
     <meta name="ent</title>
 </head>
 <body>
+    <link rel="stylesheet" href="style.css">
 <h1>My status</h1>
 
 
-<h2>My pic</h2>
+<h2 id="rat">My pic</h2>
 
-<img src="6125.jpg"></img>
+<img class="friend" src="6125.jpg"></img>
 
-<h2>Myself</h2>
-
-<p>name : Md: Jony Ahammed</p>
+<h2 id="cat">Myself</h2>
+<div id="birthday"><p>name : Md: Jony Ahammed</p>
 <p>Fathers name : Md: Kamal Hossine</p>
 <p>Brother Name : Faysal Ahammed</p>
 <p>friends Name : Md : Amin Hossin</p>
 <p>Gender : Mail</p>
 <p>Relision : islam</p>
 <p>Netionality : Bangladeshi</p>
+</div>
 
-<h2>My address</h2>
-
-<p>Village : Jagusha Hothat para</p>
+<h2 id="rat">My address</h2>
+<div id="marrid"><p>Village : Jagusha Hothat para</p>
 <p>wat : Natima</p>
 <p>Thana : Moheshpur</p>
 <p>Jela : Jhenaidah</p>
 <p>Bivag : Khulna</p>
 <p>Country : Bangladesh</p>
+</div>
 
 <h2>My Friend</h2>
 
@@ -44,32 +45,36 @@
     <li>Md : Akash Islam</li>
 </ul>
 
-<h2>Md : Amin Hossin</h2>
+<div class="group"><h2 class="easy">Md : Amin Hossin</h2>
 
-<p>Amin is my best friend. <b>He is 18 years old</b> . He  is in class 11. He is a good student. He is subject is science. He is Honest. He is <b>facebook id</b>  name is <b><a href="https://web.facebook.com/amirrana.aminrana.1">Amin Hossen</a></b>  He has a 3 brother and sister. 1 yeangar brother and 2 yeangar sister. yeangar brother name is Alamin and sister name is Ema. His father name is Iqramul.</p>
+<p id="murgi">Amin is my best friend. <b>He is 18 years old</b> . He  is in class 11. He is a good student. He is subject is science. He is Honest. He is <b>facebook id</b>  name is <b><a href="https://web.facebook.com/amirrana.aminrana.1">Amin Hossen</a></b>  He has a 3 brother and sister. 1 yeangar brother and 2 yeangar sister. yeangar brother name is Alamin and sister name is Ema. His father name is Iqramul.</p>
+</div>
 
-<h2>Md : Miraz Islam</h2>
+<div class="girlfriend"><h2 class="easy">Md : Miraz Islam</h2>
 
-<p>He is my best friend. He is 16 years old. he read in class 10. <b>He is my new friend</b> .  He is bad student. But he is honest. His <b>facebook id</b>  name is <b><a href="https://web.facebook.com/profile.php?id=100076843777335">Miraz Ahammed</a></b>  He has 2 litile sister. 1 sister name is Mim and Mithila. His father name is Rajon. H live in Moheshpur.  
+<p id="man">He is my best friend. He is 16 years old. he read in class 10. <b>He is my new friend</b> .  He is bad student. But he is honest. His <b>facebook id</b>  name is <b><a href="https://web.facebook.com/profile.php?id=100076843777335">Miraz Ahammed</a></b>  He has 2 litile sister. 1 sister name is Mim and Mithila. His father name is Rajon. H live in Moheshpur.  
+</div></p>
 
-</p>
- 
-<h2>Md : Rony Ahammed</h2>
+<div class="group"><h2 class="easy">Md : Rony Ahammed</h2>
 
-<p>He is my littile brother or Friend. He is very good student. He read in class 10. <b>He look very nice.</b>  Rony <b>facebook Id</b>  name <b><a href="https://web.facebook.com/rony.ahmmed.9041/about_details">Faysal Ahammed Rony</a></b>  he is my favourite brother.</p> 
+<p id="love">He is my littile brother or Friend. He is very good student. He read in class 10. <b>He look very nice.</b>  Rony <b>facebook Id</b>  name <b><a href="https://web.facebook.com/rony.ahmmed.9041/about_details">Faysal Ahammed Rony</a></b>  he is my favourite brother.</p> 
+</div>
 
-<h2>Md : Raihan Islam</h2>
+<div class="girlfriend"><h2 class="easy">Md : Raihan Islam</h2>
 
-<p>Hi is my friend. He is very inteligent. he is science student. He studit at Jessore colledge. is very good student. He first boy in the class. He live in kashipur. He is honest. his facebook id name is <a href="https://web.facebook.com/mdrayhan.ali.56027281">Raihan Ali.</a> </p>
+<p id="pagol">Hi is my friend. He is very inteligent. he is science student. He studit at Jessore colledge. is very good student. He first boy in the class. He live in kashipur. He is honest. his facebook id name is <a href="https://web.facebook.com/mdrayhan.ali.56027281">Raihan Ali.</a> </p>
+</div>
 
-<h2>Md : Aminur Rohoman</h2>
+<div class="group"><h2 class="easy">Md : Aminur Rohoman</h2>
 
-<p>He is a good student. he is very honest. he studit at Moheshpur digri coilledge. He is 19 years old. He has a laptop. His facebook id name <b><a href="https://web.facebook.com/profile.php?id=100026217618647">Aminur rohoman</a> He live in Jagusha.</b>   </p>
+<p id="jibon">He is a good student. he is very honest. he studit at Moheshpur digri coilledge. He is 19 years old. He has a laptop. His facebook id name <b><a href="https://web.facebook.com/profile.php?id=100026217618647">Aminur rohoman</a> He live in Jagusha.</b>   </p>
+</div>
 
-<h2>Md : Akash Islam</h2>
+<div class="girlfriend"><h2 class="easy">Md : Akash Islam</h2>
 
-<p>He is a good student. He studit at Jessore digri colledge. He is very inteligent. His very honest. his facebook id <b><a href="https://web.facebook.com/shanewatson.watson.3956">Humaun Kabir Shawon</a></b>  </p>
+<p id="boy">He is a good student. He studit at Jessore digri colledge. He is very inteligent. His very honest. his facebook id <b><a href="https://web.facebook.com/shanewatson.watson.3956">Humaun Kabir Shawon</a></b>  </p>
 
-</p>
+</p></div>
+
 </body>
 </html>
